fix: 根据于老师批注, 修改前文的小文字问题

--- a/Tex/Chap_Application_Yu.tex
+++ b/Tex/Chap_Application_Yu.tex
@@ -1,16 +1,16 @@
 \section{COStream数据流编程语言及其在深度学习中的应用（于俊清）}
 \subsection{引言}
-随着半导体技术的发展，未来的高性能处理器将会在单块芯片上集成数十个甚至数百个处理核心。近些年，多/众核架构已经被普遍认为是开发并行性的有效平台，一方面它为各类应用提供了强大的并行计算能力，特别是在数字媒体处理和科学计算等计算密集型的应用领域；另一方面它也将如何充分的挖掘程序的并行性以及如何充分的利用资源等问题暴露给了编程人员。传统的编程模型，如C、C++和Fortran，主要对应的都是单指令流和集中存储管理模式，无法很好的适合这种特殊的并行体系结构。当前比较流行的编程模型，如OpenMP和MPI，要求程序员必须熟悉并行系统的底层结构，编程人员设计并行程序时需要根据系统底层结构进行精心的任务划分、数据通信以及同步设计。导致了程序性能受制于编程人员并行算法的设计和对并行系统的理解，极大地增加了编程人员，尤其是各个应用领域编程人员的编程负担。
-针对上述问题，数据流编程模型作为新的高效的并行编程模型被提出来，编译器可以根据多核处理器体系结构的特点有效的将任务进行划分并映射到各个处理核上，生成适合于当前体系结构的可执行程序，大大简化编程难度，提高程序执行的效率。
+近些年，多/众核架构已经被普遍认为是开发并行性的有效平台，一方面它为各类应用提供了强大的并行计算能力，特别是在数字媒体处理和科学计算等计算密集型的应用领域；另一方面它也将如何充分挖掘程序的并行性以及如何充分利用资源等问题暴露给了编程人员。传统的编程模型，如C、C++和Fortran，主要对应的都是单指令流和集中存储管理模式，无法很好的适合这种特殊的并行体系结构。当前比较流行的编程模型，如OpenMP和MPI，要求程序员必须熟悉并行系统的底层结构，编程人员设计并行程序时需要根据系统底层结构进行精心的任务划分、数据通信以及同步设计。导致程序性能受制于编程人员并行算法的设计和对并行系统的理解，增加了编程人员，尤其是各个应用领域编程人员的编程复杂度。
+针对上述问题，数据流编程模型作为新的高效的并行编程模型被被重新重视，编译器可以根据多核处理器体系结构的特点有效的将任务进行划分并映射到各个处理核上，生成适合于当前体系结构的可执行程序，大幅简化编程难度，提高程序执行的效率。
 
-基于多核与分布式系统结构以及数据流编程模型的特点，华中科技大学的智能媒体计算与网络安全实验室设计并实现了一种面向数据流编程的编译系统 -- COStream。语言的名称由3个关键字：Composite、Operator和Stream组合而来。COStream程序采用有向图来描述应用的处理过程，图中节点表示计算，边表示数据依赖，边的方向表示数据流动方向。下文从几个小节进行介绍: 5.2.2编程语言设计;5.2.3编译器框架; 5.2.4~5.2.5面向不同平台的编译优化; 5.2.6深度学习程序开发实例
+基于多核与分布式系统结构以及数据流编程模型的特点，华中科技大学的智能媒体计算与网络安全实验室设计并实现了一种面向数据流编程的编程语言与编译系统 -- COStream。语言的名称由3个关键字：Composite、Operator和Stream组合而来。COStream程序采用有向图来描述应用的处理过程，图中节点表示计算，边表示数据依赖，边的方向表示数据流动方向。
 
 
 
 \subsection{COStream 数据流编程语言}
-COStream是在C语言文法基础上加入了表征数据流图结构文法而形成的数据流编程语言，它实现了对数据流图最基本的抽象，方便数据流程序的编写。语言的名称由3个关键字：Composite、Operator和Stream组合而来。
+COStream是在C语言文法基础上加入了表征数据流图结构文法而形成的数据流编程语言，它实现了对数据流图最基本的抽象，方便数据流程序的编写。
 
-\subsubsection{与 C 语言的联系与区别}
+\subsubsection{与 C 语言的关系}
 （1）COStream 保留了 C 语言的全局变量声明， 在文件头部声明了全局变量名后, 可以在后续的函数，Composite 和 Operator 中使用。下面给出了一些示例代码:
 \begin{algorithm}\label{algo:standard}
 int i = 0; double j = 0.0; //支持整数和浮点数\\
@@ -40,6 +40,9 @@ double expr(double base, double x)\{\\
 \end{itemize}
 
 但与 C 语言不同的是, COStream 抛弃了 C 语言中函数必须先声明后调用的限制, 而参考其它语言的文法, 规定函数的调用可以放在声明前, 实现方式为通过编译器在文法解析时的预处理, 优先将全局变量和函数声明信息存入符号表, 使得解析函数调用时可以直接从符号表中提取相关信息, 而非依赖上下文环境。
+
+\subsubsection{Stream}
+数据流（stream）是由一系列数据流成员（token）组成的序列，作为通信载体连接数据流图中各个计算单元（actor），它是对数据流图中通信边的抽象，为计算单元提供可并行操作的数据对象。组成stream的token是一种复合数据类型，运算主要是对token进行的。存储器中对数据流的安排对于程序员而言是透明的。COSteam代表token的stream声明类似于C语言的结构体，可以包括任意基本C数据类型（如int、float和double等）、字符串类型（string）和基本类型的数组等。数据流分为输入数据流和输出数据流两种类型。在SDF图中输入数据流对应actor的输入边，对actor是只读的；输出数据流对应actor的输出边，对actor是可读写的。一般来说，一个stream是一个actor的输入数据流同时又是另一个actor的输出数据流。
 
 \subsubsection{Operator}
 
@@ -253,9 +256,7 @@ FileWriter(B)(“result.txt”);
 
 此外，仍然存在许多常用能性 Composite有待于内置在COStream编程语言中， 实验室的全体师生会积极进行版本迭代，进一步改进和优化COStream的编程语言结构设计。 
 
-\subsection{COStream 编译器框架简介}
-
-前文介绍了 COStream 数据流编程语言, 由此我们可以根据有限的文法来组合出想要的数据流程序。但人类编写的数据流程序对于计算机来说只是一串文本字符串，必须经过特定编译器的编译才能转化为对应的可执行程序。下面介绍由华中科技大学的智能媒体计算与网络安全实验室设计并实现的COStream数据流编程的编译系统。
+\subsection{COStream 编译器框架}
 
 \begin{figure}[htbp]
   \centering
