--- a/Tex/Chap_Application_Yu.tex
+++ b/Tex/Chap_Application_Yu.tex
@@ -1,3 +1,24 @@
+\makeatletter
+\newenvironment{breakablealgorithm}
+  {% \begin{breakablealgorithm}
+  \begin{flushleft}
+    \refstepcounter{algorithm}% New algorithm
+    \hrule height.8pt depth0pt \kern2pt% \@fs@pre for \@fs@ruled
+    \renewcommand{\caption}[2][\relax]{% Make a new \caption
+      {\raggedright\textbf{\ALG@name~\thealgorithm} ##2\par}%
+      \ifx\relax##1\relax % #1 is \relax
+        \addcontentsline{loa}{algorithm}{\protect\numberline{\thealgorithm}##2}%
+      \else % #1 is not \relax
+        \addcontentsline{loa}{algorithm}{\protect\numberline{\thealgorithm}##1}%
+      \fi
+      \kern2pt\hrule\kern2pt
+    }
+  }{% \end{breakablealgorithm}
+    \kern2pt\hrule\relax% \@fs@post for \@fs@ruled
+  \end{flushleft}
+  }
+\makeatother
+
 \section{COStream数据流编程语言及其在深度学习中的应用（于俊清）}
 \subsection{引言}
 近些年，多/众核架构已经被普遍认为是开发并行性的有效平台，一方面它为各类应用提供了强大的并行计算能力，特别是在数字媒体处理和科学计算等计算密集型的应用领域；另一方面它也将如何充分挖掘程序的并行性以及如何充分利用资源等问题暴露给了编程人员。传统的编程模型，如C、C++和Fortran，主要对应的都是单指令流和集中存储管理模式，无法很好的适合这种特殊的并行体系结构。当前比较流行的编程模型，如OpenMP和MPI，要求程序员必须熟悉并行系统的底层结构，编程人员设计并行程序时需要根据系统底层结构进行精心的任务划分、数据通信以及同步设计。导致程序性能受制于编程人员并行算法的设计和对并行系统的理解，增加了编程人员，尤其是各个应用领域编程人员的编程复杂度。
@@ -393,14 +414,60 @@ GPU端允许扩大的倍数为N2，N2需满足公式\ref{eq:2.2}和公式\ref{eq
 任务的分类处理，该步骤根据任务是否具有可并行性以及相应通信开销的大小将其分配到GPU或CPU上去运行，充分利用CPU与GPU各自的优势，同时降低整体程序的通信量。COStream数据流程序中，计算节点有两种状态：有状态（Stateful）和无状态（Stateless）。状态为Stateful的结点表示该计算结点连续两次迭代运算间存在数据依赖，两次迭代运算不可并行执行；状态为Stateless的结点则与之相反，多次换代运算之间互相独立，可并行执行。数据流程序任务的分类处理，目标是根据计算节点的计算特点，将计算节点分配到适合的计算平台上进行计算，在分类的过程中，既要考虑该计算任务是否具有可并行性，即是否为状态是Stateless的结点，同时也要考虑GPU间高额的通信开销，减小异构平台间的数据通信量。任务分类首先判断SDF图中各个计算节点的状态，将Stateless计算节点划分到GPU端，Stateful计算节点划分到CPU端。接着考虑异构平台间的通信开销，调节边界结点。对于划分到GPU端的Stateless结点，如果其父结点为Stateful结点，并且其子结点为Stateful结点，那么初步分类的结果就会带来大量的GPU间的数据通信，从而产生巨大的通信开销，影响数据流程序的整体性能，因此任务初步分类完成后，需要将此类计算节点微调到CPU端。
 
 \subsubsection{任务划分}
+基于GPU/CPU混合架构的数据流程序任务划分包括两部分内容——GPU端任务的水平分裂（GPU Tasks Horizon Splitting, GTHS）和CPU端离散任务均衡化（CPU Disperse Tasks Balancing, CDTB）。
 
-在任务划分预处理后，可以根据得到的SDP图进行任务划分。针对GPU/CPU异构多核集群，采用通用的METIS划分工具和Ｋ路图划分方法无法考虑到CPU和GPU间的通信开销。因此在GPU/CPU混合架构下采用METIS划分工具划分分为两个步骤进行，第一步通过将完整的SDF图进行METIS划分为N块，N表示GPU的个数，每一个划分分配一个GPU；第二步通过遍历每一个划分中的计算节点并判断该节点的状态，如果该计算节点的状态为Stateful，则将其划分到CPU端，剩余的结点划分在GPU端。
+对于任务划分，它既要满足负载均衡，又要降低通信开销，常用的针对SDF图的划分方法有METIS划分工具、K路图划分方法等。METIS划分与K路划分方法都满足负载均衡和减小通信开销的目标，由于GPU与GPU间数据通信开销的巨大，导致这两种划分方法对应用程序的整体执行效率提高不显著。
 
-使用$Metis$ 划分与Ｋ路划分方法都满足负载均衡和减小通信开销的目标，由于GPU与GPU间数据通信开销巨大，导致这两种划分方法对应用程序的整体执行效率提高不显著。
+针对上述问题，GTHS算法利用任务的并行性将其均衡分裂到各GPU，以防止GPU与GPU间高额的通信开销影响数据流程序的整体性能。算法\ref{algo:gths}描述了GPU端任务水平分裂的具体实现过程，该方法主要分为两个阶段完成：一是GPU端actor的分裂，完成任务的分类处理和扩大因子的引入后，划分到GPU端的任务各自的迭代计算具有很高的并行性，但针对一些特殊的应用程序，其GPU端任务间的数据访问对前一次的运行结果有依赖性，对于这种特殊类型的应用程序不进行GPU端任务的水平分裂，而将分配到GPU端的任务均由一个GPU计算完成；该划分方法针对GPU端任务间数据访问对前一次的运行结果无依赖性的应用，遍历分配到GPU端的各actor，修改各actor的稳态执行次数，并创建M个新actor（M为GPU的个数减1），将该actor复制给M个新创建的actor（称该actor为新创建的M个actor的模板结点，新创建的M个actor为该actor的复制结点），并修改对应新结点的名字(行1-12)；二是对应的新结点连接，actor分裂完成后，新创建的actor是离散的，将各离散的新创建的actor对应连接起来，形成新的连通的SDF图（行13-42）。依次遍历每一个新创建的actor，如果其模板actor的父结点是GPU端actor，则该新创建的actor的模板结点的父结点在上一阶段也进行了水平分裂，那么将该新创建的actor与其模板actor的父结点的相应复制结点连接起来；如果其模板actor的父结点是CPU端actor，则其模板actor的父结点在上一阶段未进行水平分裂，那么将该新创建的actor与其模板actor的父结点直接连接起来（行14-27）；如果其模板actor的子结点是GPU端actor，则该模板结点的子结点在上一阶段也进行了水平分裂，那么需要将该新创建的actor与其模板actor的子结点的相应复制结点连接起来；如果其模板actor的子结点是CPU端actor，则该模板actor的子结点在上一阶段未进行水平分裂，那么需要将该新创建的actor与其模板actor的子结点直接连接起来（行28-41）。如图\ref{fig:3.1}所示为数据流程序GPU端任务水平分裂的结果示意图，图\ref{fig:3.1}(a)为任务的分类结果，计算节点Ａ和计算节点Ｆ为CPU端结点计算节点Ｂ、Ｃ、Ｄ、Ｆ为GPU端结点；图\ref{fig:3.1}(b)为GPU端任务水平分裂结果，其中，计算节点Ａ和计算节点Ｆ为CPU端结点，计算节点B1、C1、D1和E1划分到GPU0，计算节点B2、C2、D2和E2划分到GPU1，计算节点B3、C3、D3和E3划分到GPU２。
 
-针对以上问题，提出了数据流程序GPU端任务的水平分裂(GTHS)算法，该算法利用计算节点的并行性将其均衡分裂到各GPU，以防止GPU与CPU间高额的通信开销影响数据流程序的整体性能。主要分为两个步骤，即数据流程序GPU端任务的水平分裂和CPU端离散任务均衡化。
+\begin{breakablealgorithm} \label{algo:gths}
+  \caption{GPU端任务水平分裂算法}
+  {\bf Input: GPUNode[ ], SDF graph}\\
+  {\bf Output: new SDF graph}\\
+  1 for all actor v in GPUNode[] do\\
+  2   \hspace*{1 pc} v.executions /= GPUNumber;\\
+  3   \hspace*{1 pc} int NewActorNumber = GPUNumber – 1;\\
+  4   \hspace*{1 pc} int index = 1;\\
+  5   \hspace*{1 pc} multimap mapActor2NewActor;\\
+  6   \hspace*{1 pc} for int i = 0; i < NewActorNumber; ++i do\\
+  7   \hspace*{2 pc} Actor m = CreateNewActor(v);\\
+  8   \hspace*{2 pc} m.name += itoa(index);\\
+  9   \hspace*{2 pc} mapActor2NewActor.insert(v,m);\\
+  10  \hspace*{2 pc} ++index;\\
+  11  \hspace*{1 pc} end for\\
+  12 end for\\
+  13 for all actor u in GPUNode[] do\\
+  14  \hspace*{1 pc} if(IsGPUNode(u.parent))then\\
+  15  \hspace*{1 pc} int index = 1;\\
+  16  \hspace*{1 pc} for ;index < GPUNumber;++index do\\
+  17  \hspace*{2 pc} Actor a = FindNewActor(u,index);\\
+  18  \hspace*{2 pc} Actor b= FindNewActor(u.parent,index);\\
+  19  \hspace*{2 pc} a.parent = b;\\
+  20  \hspace*{1 pc} end for\\
+  21  \hspace*{1 pc} else\\
+  22  \hspace*{1 pc} int index = 1;\\
+  23  \hspace*{1 pc} for ; index < GPUNumber; ++index do\\
+  24  \hspace*{2 pc} Actor a = FindNewActor(u,index);\\
+  25  \hspace*{2 pc} a.parent = u.parent;\\
+  26  \hspace*{1 pc} end for\\
+  27  \hspace*{1 pc} end if\\
+  28  \hspace*{1 pc} if(IsGPUNode(u.child))then\\
+  29  \hspace*{1 pc} int index = 1;\\
+  30  \hspace*{1 pc} for ;index < GPUNumber;++index do\\
+  31  \hspace*{2 pc} Actor a = FindNewActor(u,index);\\
+  32  \hspace*{2 pc} Actor b= FindNewActor(u.child,index);\\
+  33  \hspace*{2 pc} a.child = b;\\
+  34  \hspace*{1 pc} end for\\
+  35  \hspace*{1 pc} else\\
+  36  \hspace*{1 pc} int index = 1;\\
+  37  \hspace*{1 pc} for ; index < GPUNumber; ++index do\\
+  38  \hspace*{2 pc} Actor a = FindNewActor(u,index);\\
+  39  \hspace*{2 pc} a.child = u.child;\\
+  40  \hspace*{1 pc} end for\\
+  41  \hspace*{1 pc} end if\\
+  42 end for
+\end{breakablealgorithm}
 
-数据流程序GPU端任务的水平分裂包括GPU端计算节点的分类以及对于新节点的连接。首先针对GPU端任务间数据访问对前一次的运行结果无依赖性的 应用，遍历分配到GPU端的各个计算节点，修改它们的稳态执行次数，并创建M个这些计算节点的复制节点（M为GPU个数减1）。这些计算节点分裂完成后，新创建的计算节点是离散，需要将个离散的计算节点与其对应的父子节点相连。如果其模板计算节点的父结点是GPU端计算节点，则该新创建的计算节点的模板结点的父结点在上一阶段也进行了水平分裂，那么将该新创建的计算节点与其模板计算节点的父结点的相应复制结点连接起来；如果其模板计算节点的父结点是CPU端计算节点，则其模板计算节点的父结点在上一阶段未进行水平分裂，那么将该新创建的计算节点与其模板计算节点的父结点直接连接起来；如果其模板计算节点的子结点是GPU端计算节点，则该模板结点的子结点在上一阶段也进行了水平分裂，那么需要将该新创建的计算节点与其模板计算节点的子结点的相应复制结点连接起来；如果其模板计算节点的子结点是 CPU端计算节点，则该模板计算节点的子结点在上一阶段未进行水平分裂，那么需要将该新创建的计算节点与其模板计算节点的子结点直接连接起来。
 
 \begin{figure}[htbp]
   \centering
@@ -409,9 +476,7 @@ GPU端允许扩大的倍数为N2，N2需满足公式\ref{eq:2.2}和公式\ref{eq
   \caption{GPU端任务水平分裂示意图}\label{fig:3.1}
 \end{figure}
 
-如图\ref{fig:3.1}所示为数据流程序GPU端任务水平分裂的结果示意图，图\ref{fig:3.1}(a)为任务的分类结果，计算节点Ａ和计算节点Ｆ为CPU端结点计算节点Ｂ、Ｃ、Ｄ、Ｆ为GPU端结点；图\ref{fig:3.1}(b)为GPU端任务水平分裂结果，其中，计算节点Ａ和计算节点Ｆ为CPU端结点，计算节点B1、C1、D1和E1划分到GPU0，计算节点B2、C2、D2和E2划分到GPU1，计算节点B3、C3、D3和E3划分到GPU２。
 
-\subsubsection{数据流程序CPU端离散任务的均衡化}
 GPU/CPU混合架构平台下，GPU端任务的水平分裂完成了GPU端任务的划分，而传统的任务划分方法对任务分类处理后分配到CPU端的各个离散结点未进行划分处理，均由一个CPU核控制计算，如果该CPU核的工作量过大时就会影响整个程序的执行效率。数据流程序CDTB算法针对这些CPU端的离散结点，结合复制分裂算法，选择合适CPU核，采用贪心的思想，均衡地将各计算结点分成若干个划分并将各划分映射到相应的CPU核上，保证各CPU核的负载均衡并提高各CPU核的利用率。基于GPU/CPU混合架构的数据流程序CPU端离散任务的均衡化过程主要包括以下三个阶段：
 
 \begin{itemize}	
