feat:添加第5、6章引用注释

--- a/Tex/Chap_Application_Yu.tex
+++ b/Tex/Chap_Application_Yu.tex
@@ -303,7 +303,7 @@ FileWriter(B)(“result.txt”);
 
 \subsection{面向 X86 多核集群的 COStream 编译优化} \label{section:x86}
 
-随着多核处理器平台日趋复杂，数据流程序的并行编译优化工作变得更加困难，其问题主要包括多处理器核的并行调度和对主存的访问延迟。针对数据流程序共享存储多核架构的结构特点，构造出高吞吐量低延迟的软件流水线调度，主要分为任务划分、阶段赋值、流水线执行三个步骤。
+随着多核处理器平台日趋复杂，数据流程序的并行编译优化工作变得更加困难，其问题主要包括多处理器核的并行调度和对主存的访问延迟。针对数据流程序共享存储多核架构的结构特点，构造出高吞吐量低延迟的软件流水线调度，主要分为任务划分、阶段赋值、流水线执行三个步骤[12]。
 
 \subsubsection{任务划分}
 
@@ -378,11 +378,11 @@ FileWriter(B)(“result.txt”);
 
 \subsection{面向 CPU 和 GPU 异构多核集群的 COStream 编译优化}
 
-目前，各种新型的高性能体系结构不断涌现，以传统处理器CPU与图形处 理器GPU协同工作模式来构建异构硬件平台逐渐成为一种新型的并行处理方 式。CPU/GPU异构集群是由多个服务器节点组成的集群，其中每个节点封装多 核CPU与一定数量的GPU。CPU/GPU异构集群相对通用CPU集群在计算、访存与通信方面存在很大的差异性，这给研究人员带来了难度。 
+目前，各种新型的高性能体系结构不断涌现，以传统处理器CPU与图形处 理器GPU协同工作模式来构建异构硬件平台逐渐成为一种新型的并行处理方 式[1]。CPU/GPU异构集群是由多个服务器节点组成的集群，其中每个节点封装多 核CPU与一定数量的GPU。CPU/GPU异构集群相对通用CPU集群在计算、访存与通信方面存在很大的差异性，这给研究人员带来了难度。 
 
 COStream在异构集群的数据流程序的编译优化上，提出并实现了面向 CPU/GPU混合架构的数据流程序任务划分方法和多粒度调度策略，包括任务的分类处理、GPU端任务的水平分裂和CPU端离散任务的均衡化，构造了软件流水调度，经过编译优化生成OpenCL目标代码。
 
-GPU在大规模数据的并行方面有很大的优势，但GPU间的通信开销却相当巨大，任务划分目的主要是保证各服务器节点的计算负载均衡、通信开销最小化，以及在单个节点上，充分发挥CPU逻辑控制与串行计算特点以及GPU计算密集性优势，同时保证 CPU 多核间负载均衡和不同GPU间数据通信开销最小化。COStream在异构集群的数据流程序的编译框架中的任务划分算法主要分为任务划分预处理、任务划分与调度。
+GPU在大规模数据的并行方面有很大的优势，但GPU间的通信开销却相当巨大，任务划分目的主要是保证各服务器节点的计算负载均衡、通信开销最小化，以及在单个节点上，充分发挥CPU逻辑控制与串行计算特点以及GPU计算密集性优势，同时保证 CPU 多核间负载均衡和不同GPU间数据通信开销最小化。COStream在异构集群的数据流程序的编译框架中的任务划分算法主要分为任务划分预处理、任务划分与调度[10]。
 
 \subsubsection{任务划分预处理}
 该阶段主要分成两个步骤：一是引入扩大因子，二是任务的分类处理。引入扩大因子，即计算节点执行次数整体扩大，在各个应用程序中，各计算节点的执行次数远远小于GPU可并行执行的规模，采用执行次数的整体扩大的方法，增大各个计算节点的工作量，从而充分利用GPU的并行计算单元；扩大因子的上限由三个因素决定：主存大小（Host Memory）、GPU存储空间（Device Memory）和GPU缓冲区分配机制。
